--- a/openclash.yaml
+++ b/openclash.yaml
@@ -1,11 +1,7 @@
-# 必读！！！
-# 此版本没有做防泄露处理，如介意请使用另一个名字为configdns的版本
-# 注意规则在满足自己需求情况下，尽量做到精简，不要过度复杂，以免影响性能。
-# 跑裸核用户请自行去掉下方控制面板模块的注释。
 # 机场订阅
 proxy-providers:
-  Airport1:
-    url: "机场订阅填到这里，两端引号不要去掉，不要填写到下方链接里去！！"
+  renzheyun:
+    url: "https://ninjasub.com/link/88jfKyHcnukWsskj?clash=1"
     type: http
     interval: 86400
     health-check:
@@ -32,28 +28,6 @@ keep-alive-interval: 15
 profile:
   store-selected: true
   store-fake-ip: true
-
-# 为防止使用插件朋友遇到面板问题，我注释掉了此模块。
-#external-controller: 0.0.0.0:9090
-#secret: ""
-#external-ui: ui
-#external-ui-name: zashboard
-#external-ui-url: "https://github.com/Zephyruso/zashboard/archive/refs/heads/gh-pages.zip"
-
-# 嗅探（fakeip下其实可以不用嗅探）
-sniffer:
-  enable: true
-  sniff:
-    HTTP:
-      ports: [80, 8080-8880]
-      override-destination: true
-    TLS:
-      ports: [443, 8443]
-    QUIC:
-      ports: [443, 8443]
-  skip-domain:
-    - "Mijia Cloud"
-    - "+.push.apple.com"
 
 # 入站
 tun:
