--- a/openclash.yaml
+++ b/openclash.yaml
@@ -67,31 +67,31 @@ dns:
 proxy-groups:
   - {name: 🚀 默认代理, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 🌍 全部节点, 直连]}
   
-  - {name: 📺 哔哩哔哩, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 🎸 spotify, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
+  - {name: 哔哩哔哩, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/bilibili.png}
+  - {name: spotify, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Spotify.png}
 
-  - {name: ☁ OneDrive, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 💻 Microsoft, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 📹 YouTube, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 🍀 Google, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 🍎 Apple, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
+  - {name: OneDrive, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/OneDrive.png}
+  - {name: Microsoft, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连],icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Microsoft.png}
+  - {name: YouTube, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/YouTube.png}
+  - {name: Google, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Google.png}
+  - {name: Apple, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Apple.png}
   
-  - {name: GitHub, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: "https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/GitHub.png"}
-  - {name: ChatGPT, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: "https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/ChatGPT.png"}
+  - {name: GitHub, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/GitHub.png}
+  - {name: ChatGPT, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/ChatGPT.png}
  
   
-  - {name: 🎵 TikTok, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 📲 Telegram, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 🎥 NETFLIX, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
-  - {name: 💶 PayPal, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连]}
+  - {name: TikTok, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连],icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/TikTok.png}
+  - {name: Telegram, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Telegram.png}
+  - {name: NETFLIX, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连], icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Netflix_b.png}
+  - {name: PayPal, type: select, proxies: [🇭🇰 香港, 🇹🇼 台湾, 🇸🇬 新加坡, 🇯🇵 日本, 🇺🇲 美国, 直连],icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/PayPal.png}
   
 
   
-  - {name: 🇭🇰 香港, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美)).)*$"}
-  - {name: 🇹🇼 台湾, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|深|美)).)*$"}
-  - {name: 🇸🇬 新加坡, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(港|台|韩|日|美)).)*$"}
-  - {name: 🇯🇵 日本, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$"}
-  - {name: 🇺🇲 美国, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新)).)*$"}
+  - {name: 香港, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(港|HK|(?i)Hong))^((?!(台|日|韩|新|深|美)).)*$", icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Hong_Kong.png}
+  - {name: 台湾, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(台|TW|(?i)Taiwan))^((?!(港|日|韩|新|深|美)).)*$", icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Taiwan_Province.png}
+  - {name: 新加坡, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(新加坡|坡|狮城|SG|Singapore))^((?!(港|台|韩|日|美)).)*$", icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Singapore.png}
+  - {name: 日本, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(日|JP|(?i)Japan))^((?!(港|台|韩|新|美)).)*$", icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/Japan.png}
+  - {name: 美国, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "(?=.*(美|US|(?i)States|America))^((?!(港|台|日|韩|新)).)*$", icon: https://github.com/Vbaethon/HOMOMIX/blob/main/Icon/Color/USA.png}
   
   - {name: 🎲 自动选择, type: url-test, include-all: true, tolerance: 20, interval: 300, filter: "^((?!(直连)).)*$"}
   - {name: 🌍 全部节点, type: select, include-all: true}
